--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://IreneLee18.github.io/AQI-5f"
+  "homepage": "https://IreneLee18.github.io/aqi-5f"
 }
